--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/traverse": "^7.23.2",
     "@babel/core": "^7.22.15",
     "@babel/preset-env": "^7.22.15",
     "babel-loader": "^9.1.3",
@@ -18,7 +19,7 @@
     "file-loader": "^6.2.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
-  },
+  }  ,
   "dependencies": {
     "dompurify": "^3.0.5"
   }
